--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/screenCont"
@@ -56,21 +57,21 @@
             android:contentDescription="play"
             android:textFontWeight="0"
             app:icon="@android:drawable/ic_media_play"
-            app:iconGravity="start|end"
+            app:iconGravity="start"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="13dp" />
 
-        <Button
-            android:id="@+id/pauseBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:contentDescription="pause"
-            android:textFontWeight="0"
-            app:icon="@android:drawable/ic_media_pause"
-            app:iconGravity="start|end"
-            app:layout_constraintTop_toTopOf="@+id/startBtn"
-            tools:layout_editor_absoluteX="130dp" />
+<!--        <Button-->
+<!--            android:id="@+id/pauseBtn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="0"-->
+<!--            android:contentDescription="pause"-->
+<!--            android:textFontWeight="0"-->
+<!--            app:icon="@android:drawable/ic_media_pause"-->
+<!--            app:iconGravity="start|end"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/startBtn"-->
+<!--            tools:layout_editor_absoluteX="130dp" />-->
 
         <Button
             android:id="@+id/resetBtn"
