--- a/app/src/main/res/layout/floating_layout.xml
+++ b/app/src/main/res/layout/floating_layout.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    tools:context="com.ifryed.gymtimer.FloatingWindowGFG">
 
     <Button
         android:id="@+id/buttonMaximize"
@@ -21,18 +22,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <me.grantland.widget.AutofitTextView
         android:id="@+id/timer"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:autoSizeTextType="uniform"
         android:ems="10"
         android:enabled="false"
         android:inputType="time"
-        android:text="00:00:00"
+        android:text="00:00"
+        android:maxLines="2"
+        android:textSize="60sp"
+        app:minTextSize="16sp"
+        app:autoSizeTextType="uniform"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="80sp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,40 +57,39 @@
         tools:layout_editor_absoluteX="0dp"> <!-- or "space_between", "space_evenly" -->
 
         <Button
-            android:id="@+id/startBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:id="@+id/startBtn_f"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
             android:contentDescription="play"
             android:textFontWeight="0"
             app:icon="@android:drawable/ic_media_play"
             app:iconGravity="start|end"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="13dp" />
+            android:backgroundTint="@color/btnColor" />
 
-        <Button
-            android:id="@+id/pauseBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:contentDescription="pause"
-            android:textFontWeight="0"
-            app:icon="@android:drawable/ic_media_pause"
-            app:iconGravity="start|end"
-            app:layout_constraintTop_toTopOf="@+id/startBtn"
-            tools:layout_editor_absoluteX="130dp" />
+<!--        <Button-->
+<!--            android:id="@+id/pauseBtn"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_weight="0"-->
+<!--            android:contentDescription="pause"-->
+<!--            android:textFontWeight="1"-->
+<!--            app:icon="@android:drawable/ic_media_pause"-->
+<!--            app:iconGravity="start|end"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/startBtn"-->
+<!--            tools:layout_editor_absoluteX="130dp" />-->
 
         <Button
             android:id="@+id/resetBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
             android:contentDescription="reset"
             android:textFontWeight="0"
             app:icon="@android:drawable/ic_menu_revert"
             app:iconGravity="start|end"
             app:layout_constraintTop_toTopOf="@+id/pauseBtn"
-            tools:layout_editor_absoluteX="218dp" />
+            android:backgroundTint="@color/btnColor" />
 
 
     </com.google.android.flexbox.FlexboxLayout>
